traduction et footer plus design

--- a/src/LBF/MainBundle/Resources/translations/messages.en.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.en.yml
@@ -13,6 +13,16 @@ header:
     special:
         buttonToTop: 			TOP
 
+# Side buttons
+
+sideButtons:
+    titles:
+        home:                   Home
+        ourProducts:            Products
+        ourRecipes:             Recipes
+        aboutUs:                About us
+        footer:                 Footer
+
 # Main
 
 main:
